--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 
      <link rel="stylesheet" href="styles/portfulio.css">
+
+     <script src="https://kit.fontawesome.com/a3ed438e37.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -34,8 +36,8 @@
                       <h3 class="title-text-1">Hi, I  am</h3>
                       <h1 class="title-text-2">Mary Hardy</h1>
                       <p class=title-pragrap>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                      <button class="btn-primary">Download</button>
-                      <button class="btn-primary">Contact</button>
+                      <button class="btn-primary"><i class="fa-solid fa-download"></i> Download</button>
+                      <button class="btn-primary" > <i class="fa-solid fa-phone"></i>  Contact</button>
                  </div>
 
                    <img class="web-photos" src="Portfulio-resources-main/images/hardy.png" alt="">
